# project-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  SPEC.md  pyproject.toml
