[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gs-tiwari", email = "gtiwari@goodeducator.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-template = "project_template:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
